--- a/actividades/ej_01/index.html
+++ b/actividades/ej_01/index.html
@@ -8,14 +8,15 @@
 </head>
 <body>
     <header>
-        <h1>Actividad #</h1>
+        <h1>Actividad 1</h1>
     </header>
     <main>
+        <h1 style="text-align: center;">¡Bienvenido a mi servidor Microdot! :D</h1>
     </main>
     <footer>
         <p>Representación Frontal y Visual de Datos</p>
         <p>Computadoras de Aeronaves</p>
-        <p>Alumno XX</p>
+        <p>Alumno Valentino Gonzalez Pautaso</p>
         <p>Prof. Carlassara Fabrizio</p>
         <p id="fecha"></p>
     </footer>
